--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Argus"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -26,7 +26,7 @@
     -->
     <link rel="stylesheet" href="node_modules/react-table/react-table.css" />
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Argus</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
